--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -5,8 +5,23 @@ pipeline {
             steps {
                 sh '''
                 node --version
-                cd Modulo3JeycoArce\ci
+                cd Modulo3JeycoArce/ci
                 newman run ProyectoJeycoArce.postman_collection.json 
+                '''
+            }
+        }
+        stages('RestAssured test') {
+            steps {
+                sh '''
+                cd Modulo3JeycoArce/RestAssured
+                mvn clean test 
+                '''
+            }
+        }
+        stages('Jmeter test') {
+            steps {
+                sh '''
+                 
                 '''
             }
         }
