--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
             steps {
                 sh '''
                 node --version
-                cd Modulo3JeycoArce\ci
+                cd Modulo3JeycoArce/ci
                 newman run ProyectoJeycoArce.postman_collection.json 
                 '''
             }
