se agrega el restassured

--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -11,7 +11,14 @@ pipeline {
                 '''
             }
         }
-        
+        stage('RestAssured test pipeline') {
+            steps {
+                sh '''
+                cd RestAssured
+                mvn clean install 
+                '''
+            }
+        }
        
     }
 }
