--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -14,13 +14,13 @@ pipeline {
         stage ('RestAssured con maven') {
             steps {
                 //git url: 'https://github.com/YeicoArce/Modulo3JeycoArce'
-                //withMaven {
+                withMaven {
                     //maven: 'maven3.6.3', // (1)
                     //mavenLocalRepo: '.apache-maven-3.6.3', // (2)
                     //mavenSettingsConfig: 'my-maven-settings' // (3)
                     bat "cd RestAssured"
                     bat "mvn clean verify"
-                //} // withMaven will discover the generated Maven artifacts, JUnit Surefire & FailSafe reports and FindBugs reports
+                } // withMaven will discover the generated Maven artifacts, JUnit Surefire & FailSafe reports and FindBugs reports
             }
         }
         
