se cambia a install

--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                     //mavenLocalRepo: '.apache-maven-3.6.3', // (2)
                     //mavenSettingsConfig: 'my-maven-settings' // (3)
                     bat "cd RestAssured"
-                    bat "mvn clean verify"
+                    bat "mvn clean install"
                 } // withMaven will discover the generated Maven artifacts, JUnit Surefire & FailSafe reports and FindBugs reports
             }
         }
