--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -11,19 +11,15 @@ pipeline {
                 '''
             }
         }
-        stage ('RestAssured con maven') {
+        
+        stage('RestAssured test pipeline') {
             steps {
-                //git url: 'https://github.com/YeicoArce/Modulo3JeycoArce'
-                maven {
-                    //maven: 'maven3.6.3', // (1)
-                    //mavenLocalRepo: '.apache-maven-3.6.3', // (2)
-                    //mavenSettingsConfig: 'my-maven-settings' // (3)
-                    bat "cd RestAssured"
-                    bat "mvn clean install"
-                } // withMaven will discover the generated Maven artifacts, JUnit Surefire & FailSafe reports and FindBugs reports
+                bat '''
+                cd RestAssured
+                mvn clean install 
+                '''
             }
         }
-        
        
     }
 }
