se agrega la carpeta

--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         stage('RestAssured test pipeline') {
             steps {
                 bat '''
-                cd RestAssured
+                cd Modulo3JeycoArce/RestAssured
                 mvn clean install 
                 '''
             }
