Se modifica jenkinsfile

--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -5,8 +5,11 @@ pipeline {
             steps {
                 bat '''
                 node --version
-                cd Modulo3JeycoArce
+                npm install -g newman
+                cd Modulo3JeycoArce/ci
                 newman run ProyectoJeycoArce.postman_collection.json -e ambiente_examen.postman_environment.json
+                cd..
+                cd..
                 '''
             }
         }
@@ -14,8 +17,9 @@ pipeline {
         stage('RestAssured test pipeline') {
             steps {
                 bat '''
-                cd RestAssured
-                mvn clean test 
+                cd Modulo3JeycoArce/RestAssured
+                mvn clean install 
+                cd..
                 cd..
                 '''
             }
@@ -24,7 +28,7 @@ pipeline {
         stage('Jmeter test pipeline') {
             steps {
                 bat '''
-                cd LoadTest
+                cd Modulo3JeycoArce/LoadTest
                 jmeter -n -t examenjeycoarce.jmx 
                 cd..
                 '''
