se modifica el bat por sh

--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -12,9 +12,9 @@ pipeline {
 
         stage('RestAssured test pipeline') {
             steps {
-                bat '''
+                sh '''
                 cd Modulo3JeycoArce/RestAssured
-                mvn clean install 
+                mvn clean test 
                 '''
             }
         }
