--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -15,6 +15,18 @@ pipeline {
                 sh '''
                 cd RestAssured
                 mvn clean test 
+                cd..
+                '''
+            }
+        }
+
+        stage('Jmeter test pipeline') {
+            steps {
+                sh '''
+                cd LoadTest
+                export PATH=/home-pjcalvov/jmeter/apache-jmeter-5.3/bin:$PATH
+                jmeter -n -t examenjeycoarce.jmx 
+                cd..
                 '''
             }
         }
