--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -28,6 +28,21 @@ pipeline {
                 '''
             }
         }
+           
+    
+        stage('Correos') {
+            steps {
+                    echo "Envio de email"
+                }
+            }
+        
+        post {
+            always {
+                emailext body: 'Correo de prueba', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Pruebas'
+                
+        }
+     }
+        
        
     }
 }
