--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
     }
             post {
                 always {
-                    emailext body: 'A Test EMail', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Test'
+                    emailext body: 'Prueba de correo', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Pruebas'
                 
             }
         
