--- a/ci/jenkinsfile
+++ b/ci/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
     }
             post {
                 always {
-                    emailext body: 'Prueba de correo', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Pruebas'
+                    emailext body: 'El despliegue fue ejecutado', recipientProviders: [[$class: 'DevelopersRecipientProvider'], [$class: 'RequesterRecipientProvider']], subject: 'Despliegue automatico'
                 
             }
         
